Alignment issues

--- a/app/assets/stylesheets/layouts/_individualproject.scss
+++ b/app/assets/stylesheets/layouts/_individualproject.scss
@@ -3,16 +3,10 @@
     text-align:center;
 }
 
-.project-information{
-    width: 50%;
-    display:flex;
-    
-}
 
 .project-details{
     display: flex;
     width: 100%;
-    text-align: left;
 }
 
 .project-hook-size{
@@ -37,18 +31,6 @@
     text-align:left;
     margin: 20px;
 }
-
-.left-side-show{
-    width:50%;
-    text-align:left;
-    margin: 30px;
-}
-
-.right-side-show{
-    width:50%;
-    text-align:center;
-}
-
 
 
 
