--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -8,33 +8,16 @@
     text-align:center;
 }
  
-.project-information{
-    width: 100%;
-    display:flex;
-    
-}
- 
-.project-hook-size{
-    text-align:center;
-    width:40%;
-}
-.project-yarn-size{
-    text-align:center;
-    width:40%;
-}
- 
-.project-difficulty-level{
-    text-align:center;
-    width:40%;
-}
+
  
 .left-side-show{
-    width:50%;
     text-align:left;
+    justify-content: space-around;
+
 }
  
 .right-side-show{
-    width:50%;
+    justify-content: flex-end;
     text-align:center;
 }
  
